v1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: playground-v1
  namespace: dev
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`playground.local`) && PathPrefix(`/v1`)
      services:
        - name: playground-v1
          port: 8888
  tls:
    certResolver: default
